# ai-dev-tools-zoomcamp

./: README.md  substack.md
01-ai-native-workflow/: README.md
01-ai-native-workflow/weekly-feedback/: README.md  pyproject.toml
01-ai-native-workflow/weekly-feedback/src/weekly_feedback/: __init__.py  cli.py  gitlog.py  models.py  report.py  storage.py  weeks.py
01-ai-native-workflow/weekly-feedback/tests/: test_cli.py  test_gitlog.py  test_interactive.py  test_storage.py  test_weeks.py
01-overview/: README.md  article.md  event.md
01-overview/lessons/: 01-intro.md  02-tool-map.md  03-specs.md  03-understanding-codebase.md  04-bootstrapping.md  04-specs.md  05-context-engineering.md  06-grooming-a-task.md  06-implementing-a-task.md  06-steering-a-session.md  07-implementing-a-task.md  07-tests-and-verification.md  08-loop-engineering.md  08-testing-a-task.md  09-graph-engineering.md  09-loop-engineering.md  10-graph-engineering.md  10-wrap-up.md  11-wrap-up.md
02-end-to-end/: README.md  guidelines.md
03-mcp/: README.md  clients.md
04-ai-security-audit-devops/: README.md
04-build-coding-agent/: README.md
05-cicd-devops/: README.md
06-automation-lowcode/: README.md
articles/: 01-ai-native-workflow.md  02-end-to-end.md
cohorts/2025/: README.md
cohorts/2025/01-overview/: README.md  homework.md
cohorts/2025/02-end-to-end/: README.md  homework.md
cohorts/2025/03-mcp/: README.md
cohorts/2026/: README.md
docs/: 2026-syllabus-proposal.md
project/: README.md
research/: 2026-07-21-ai-native-curriculum-landscape.md
(+3 files in other folders)
