[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weekly-feedback"
version = "0.1.0"
description = "Track weekly feedback and health across your projects from the command line"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["weekly", "feedback", "status", "projects", "cli", "retrospective"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
weekly-feedback = "weekly_feedback.cli:main"
wfb = "weekly_feedback.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/weekly_feedback"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
